updated layout style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Soumya Ray</h1>
-        <img src="http://scontent-b-sjc.xx.fbcdn.net/hphotos-ash3/t1.0-9/556713_315533058535785_643286304_n.jpg" />
+        <a href="/"><h1>Soumya Ray</h1></a>
         <p></p>
         <p class="view"><a href="/research">Research</a></p>
-        <p class="view"><a href="/background">Academic Background</a></p>
-        <p class="view"><a href="https://github.com/soumyaray">View My GitHub Profile</a></p>
+        <p class="view"><a href="/background">Academic background</a></p>
+        <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
+        <p class="view"><a href="/secure">GnuPG public key</a></p>
 
       </header>
       <section>
