--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
         <p class="view"><a href="/background">Academic background</a></p>
         <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
         <p class="view"><a href="/secure">GnuPG public key</a></p>
+        <p class="view"><a href="/social">Find me online</a></p>
 
       </header>
       <section>
