--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,17 +1,32 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
+
 #SNSbutton {
   border: 2px solid #6495ED;
   border-radius: 10px;
-  width: 200px;
+  width: 150px;
   background-color: #BCD2EE;
   font-family: Arial, sans-serif;
   color: white;
   margin: 10px;
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
+  display: inline-block;
+}
+
+#SNSbutton a {
+  font-family: Arial, sans-serif;
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+}
+
+#horiz_container {
+  white-space: nowrap;
 }
 
 body {
