gscholar plugin; research div formatted

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -35,6 +35,30 @@
   white-space: nowrap;
 }
 
+.pub {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.pub_ref {
+  format: block;
+/*  border: 1px dashed blue;*/
+}
+
+.pub_cit, .pub_url {
+  width: 20%;
+  display: inline-block;
+  font-style: italic;
+  font-size: 0.8em;
+/*  border: 1px dashed red;*/
+}
+
+.journal {
+  color: #0A0A0A;
+  font-style: italic;
+  display: inline-block;
+}
+
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
