--- a/_includes/research_papers.html
+++ b/_includes/research_papers.html
@@ -1,6 +1,7 @@
+
 <div class="pub">
   <div class="pub_ref">
-    Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in
+    Ray, S., Kim, S.S., and Morris, J.G. 2015. “The Central Role of Engagement in
     Online Communities,”
     <span class="journal">Information Systems Research</span>.
   </div>
@@ -16,32 +17,13 @@
   <div class="pub_url">forthcoming</div>
 </div>
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
-    in the Context of Routine Use: An Integrative and Comparative Study of
-    Contrasting Mechanisms,”
-    <span class="journal">Information and Management</span> (50:7), pp. 523–539.
-  </div>
-  {% scholar_pub 6WjiSOwAAAAJ:d1gkVwhDpl0C %}
-</div>
+<!-- I&M paper 2013 (LOYHAB) -->
+{% scholar_pub 6WjiSOwAAAAJ:d1gkVwhDpl0C %}
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users' Switching Costs:
-    Their Nature and Formation,”
-    <span class="journal">Information Systems Research</span> (23:1), pp. 197–213.
-  </div>
-  {% scholar_pub 6WjiSOwAAAAJ:9yKSN-GCB0IC %}
-</div>
+<!-- ISR paper 2012 (ePSC) -->
+{% scholar_pub 6WjiSOwAAAAJ:9yKSN-GCB0IC %}
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
-    Providers Can Influence Security Control Perceptions and Gain Trust,”
-    <span class="journal">Decision Sciences</span> (42:2), pp. 391–412.
-  </div>
-  {% scholar_pub 6WjiSOwAAAAJ:u5HHmVD_uO8C %}
-</div>
+<!-- DS paper 2011 (SEC) -->
+{% scholar_pub 6WjiSOwAAAAJ:u5HHmVD_uO8C %}
 
 <br><br>
