Switched from soumyaray/gscholar gem to soumyaray/gentle-scholar gem; Check for no cites information

--- a/_includes/research_papers.html
+++ b/_includes/research_papers.html
@@ -1,21 +1,15 @@
 
 <div class="pub">
   <div class="pub_ref">
-    Ray, S., Kim, S.S., and Morris, J.G. 2015. “The Central Role of Engagement in
+    Ray, S., Kim, S.S., and Morris, J.G. “The Central Role of Engagement in
     Online Communities,”
     <span class="journal">Information Systems Research</span>.
   </div>
   <div class="pub_url">forthcoming</div>
 </div>
 
-<div class="pub">
-  <div class="pub_ref">
-    Hsu, P., and Ray, S. 2014. "Examining Cloud Adoption Inention, Pricing
-    Mechanism, and Deployment Model,"
-    <span class="journal">International Journal of Information Management</span>.
-  </div>
-  <div class="pub_url">forthcoming</div>
-</div>
+<!-- IJIM paper 2014 (CLOUD-TOE) -->
+{% scholar_pub 6WjiSOwAAAAJ:2osOgNQ5qMEC %}
 
 <!-- I&M paper 2013 (LOYHAB) -->
 {% scholar_pub 6WjiSOwAAAAJ:d1gkVwhDpl0C %}
