--- a/_includes/side_menu.html
+++ b/_includes/side_menu.html
@@ -1,6 +1,7 @@
 <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
-<p class="view"><a href="/service">Professional service</a></p>
+<p class="view"><a href="/service">Academic service</a></p>
+<p class="view"><a href="/classes">Classes and Instruction</a></p>
 <p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
