--- a/_includes/research_papers.html
+++ b/_includes/research_papers.html
@@ -1,13 +1,8 @@
+### Forthcoming:
+<!-- ISR paper 2014 (OC-ENG) -->
+{% scholar_pub 6WjiSOwAAAAJ:qjMakFHDy7sC %}
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., Kim, S.S., and Morris, J.G. “The Central Role of Engagement in
-    Online Communities,”
-    <span class="journal">Information Systems Research</span>.
-  </div>
-  <div class="pub_url"><a href="http://pubsonline.informs.org/doi/abs/10.1287/isre.2014.0525">forthcoming</a></div>
-</div>
-
+### Published:
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
 {% scholar_pub 6WjiSOwAAAAJ:2osOgNQ5qMEC %}
 
