Fixed footer theme reference; Added paper; changed email addr

--- a/_includes/research_papers.html
+++ b/_includes/research_papers.html
@@ -1,8 +1,7 @@
-### Forthcoming:
+### Publications:
 <!-- ISR paper 2014 (OC-ENG) -->
 {% scholar_pub 6WjiSOwAAAAJ:qjMakFHDy7sC %}
 
-### Published:
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
 {% scholar_pub 6WjiSOwAAAAJ:2osOgNQ5qMEC %}
 
