--- a/_includes/research_papers.html
+++ b/_includes/research_papers.html
@@ -1,17 +1,22 @@
 ### Publications:
 <!-- ISR paper 2014 (OC-ENG) -->
-{% scholar_pub 6WjiSOwAAAAJ:qjMakFHDy7sC %}
+Ray, S., Kim, S.S., & Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
+<br>*Information Systems Research* (25:3), pp. 528-546.
 
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
-{% scholar_pub 6WjiSOwAAAAJ:2osOgNQ5qMEC %}
+Hsu, P., Ray, S., & Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
+<br>*International Journal of Information Management* (34:4), pp. 474-488.
 
 <!-- I&M paper 2013 (LOYHAB) -->
-{% scholar_pub 6WjiSOwAAAAJ:d1gkVwhDpl0C %}
+Ray, S., and Seo, D. 2013. “The interplay of conscious and automatic mechanisms in the context of routine use: An integrative and comparative study of contrasting mechanisms”
+<br>*Information & Management* (50:7), pp. 523-539.
 
 <!-- ISR paper 2012 (ePSC) -->
-{% scholar_pub 6WjiSOwAAAAJ:9yKSN-GCB0IC %}
+Ray, S., Kim, S.S., & Morris, J.G. 2012. “Research NoteOnline Users' Switching Costs: Their Nature and Formation”
+<br>*Information Systems Research* (23:1), pp. 197-213.
 
 <!-- DS paper 2011 (SEC) -->
-{% scholar_pub 6WjiSOwAAAAJ:u5HHmVD_uO8C %}
+Ray, S., Ow, T., & Kim, S.S. 2011. “Security Assurance: How Online Service Providers Can Influence Security Control Perceptions and Gain Trust”
+<br>*Decision Sciences* (42:2), pp. 391-412.
 
 <br><br>
