--- a/_includes/current_position.html
+++ b/_includes/current_position.html
@@ -1,11 +1,5 @@
 
-<table>
-  <tr>
-    <td>
-      <b>Assistant Professor</b><br>Aug 2010 - present
-    </td>
-    <td>
-      Institute of Service Science<br>College of Technology Management<br>National Tsing Hua University
-    </td>
-  </tr>
-</table>
+<b>Associate Professor</b><br>
+Institute of Service Science<br>
+College of Technology Management<br>
+National Tsing Hua University
