Add JBR-2016 paper

--- a/_includes/research_papers.html
+++ b/_includes/research_papers.html
@@ -1,4 +1,8 @@
 ### Publications:
+<!-- JBR paper 2016 (PLS-Predict) -->
+Shmueli, G., Ray, S., Estrada, J. M. V., and Chatla, S. B. 2016. “The elephant in the room: Predictive performance of PLS models,”
+<br>*Journal of Business Research* (forthcoming), pp. 1–13.
+
 <!-- ISR paper 2014 (OC-ENG) -->
 Ray, S., Kim, S.S., & Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
 <br>*Information Systems Research* (25:3), pp. 528-546.
